// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalListMenu [common] example testing should match snapshot(s) for 1.basic 1`] = `
<ul
  className="lucid-VerticalListMenu"
  style={
    Object {
      "width": 250,
    }
  }
>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</ul>
`;

exports[`VerticalListMenu [common] example testing should match snapshot(s) for 2.nested-with-expander 1`] = `
<ul
  className="lucid-VerticalListMenu"
  style={
    Object {
      "width": 250,
    }
  }
>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-selected lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one with VerticalListMenu
      </div>
      <div
        className="lucid-VerticalListMenu-Item-expander"
        onClick={[Function]}
      >
        <ChevronIcon
          direction="down"
        />
      </div>
    </div>
    <Collapsible
      className="lucid-VerticalListMenu-Item-nested-list"
      isAnimated={true}
      isExpanded={false}
      isMountControlled={true}
      mountControlThreshold={4}
      rootType="div"
    >
      <VerticalListMenu
        onSelect={[Function]}
        selectedIndices={Array []}
      >
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item
          hasExpander={true}
        >
          Level two with VerticalListMenu and lots of text. Lorem quos natus mollitia nihil quasi! Necessitatibus corporis aliquam quam laborum nesciunt quaerat. Nostrum distinctio officiis adipisci nulla unde repellat. Soluta eaque ex obcaecati molestiae provident aspernatur sit! Expedita et.
          <VerticalListMenu
            onSelect={[Function]}
            selectedIndices={Array []}
          >
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
          </VerticalListMenu>
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
      </VerticalListMenu>
    </Collapsible>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    hasExpander={true}
  >
    Level one with VerticalListMenu
    <VerticalListMenu
      onSelect={[Function]}
      selectedIndices={Array []}
    >
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item
        hasExpander={true}
      >
        Level two with VerticalListMenu and lots of text. Lorem quos natus mollitia nihil quasi! Necessitatibus corporis aliquam quam laborum nesciunt quaerat. Nostrum distinctio officiis adipisci nulla unde repellat. Soluta eaque ex obcaecati molestiae provident aspernatur sit! Expedita et.
        <VerticalListMenu
          onSelect={[Function]}
          selectedIndices={Array []}
        >
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
        </VerticalListMenu>
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</ul>
`;

exports[`VerticalListMenu [common] example testing should match snapshot(s) for 3.nested-full-width 1`] = `
<ul
  className="lucid-VerticalListMenu"
>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-selected lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one with VerticalListMenu
      </div>
    </div>
    <Collapsible
      className="lucid-VerticalListMenu-Item-nested-list"
      isAnimated={true}
      isExpanded={true}
      isMountControlled={true}
      mountControlThreshold={4}
      rootType="div"
    >
      <VerticalListMenu
        onSelect={[Function]}
        selectedIndices={Array []}
      >
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
      </VerticalListMenu>
    </Collapsible>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one with VerticalListMenu
      </div>
    </div>
    <Collapsible
      className="lucid-VerticalListMenu-Item-nested-list"
      isAnimated={true}
      isExpanded={true}
      isMountControlled={true}
      mountControlThreshold={4}
      rootType="div"
    >
      <VerticalListMenu
        onSelect={[Function]}
        selectedIndices={Array []}
      >
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item
          isExpanded={false}
        >
          Level two with closed VerticalListMenu
          <VerticalListMenu
            onSelect={[Function]}
            selectedIndices={Array []}
          >
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
            <VerticalListMenu.Item>
              Level three
            </VerticalListMenu.Item>
          </VerticalListMenu>
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
      </VerticalListMenu>
    </Collapsible>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    isExpanded={true}
  >
    Level one with VerticalListMenu
    <VerticalListMenu
      onSelect={[Function]}
      selectedIndices={Array []}
    >
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    isExpanded={true}
  >
    Level one with VerticalListMenu
    <VerticalListMenu
      onSelect={[Function]}
      selectedIndices={Array []}
    >
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item
        isExpanded={false}
      >
        Level two with closed VerticalListMenu
        <VerticalListMenu
          onSelect={[Function]}
          selectedIndices={Array []}
        >
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
        </VerticalListMenu>
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</ul>
`;

exports[`VerticalListMenu [common] example testing should match snapshot(s) for 4.no-animations 1`] = `
<ul
  className="lucid-VerticalListMenu"
  style={
    Object {
      "width": 250,
    }
  }
>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one with VerticalListMenu
      </div>
      <div
        className="lucid-VerticalListMenu-Item-expander"
        onClick={[Function]}
      >
        <ChevronIcon
          direction="down"
        />
      </div>
    </div>
    <Collapsible
      className="lucid-VerticalListMenu-Item-nested-list"
      isAnimated={false}
      isExpanded={false}
      isMountControlled={false}
      mountControlThreshold={4}
      rootType="div"
    >
      <VerticalListMenu>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
        <VerticalListMenu.Item>
          Level two
        </VerticalListMenu.Item>
      </VerticalListMenu>
    </Collapsible>
  </li>
  <li
    className="lucid-VerticalListMenu-Item"
  >
    <div
      className="lucid-VerticalListMenu-Item-content lucid-VerticalListMenu-Item-content-is-actionable"
      onClick={[Function]}
    >
      <div
        className="lucid-VerticalListMenu-Item-content-text"
      >
        Level one
      </div>
    </div>
  </li>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    Collapsible={
      Object {
        "isAnimated": false,
        "isMountControlled": false,
      }
    }
    hasExpander={true}
  >
    Level one with VerticalListMenu
    <VerticalListMenu>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</ul>
`;
